--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Milan-Sharma-449.github.io/box-office",
+  "homepage": "https:///Milan-Sharma-449.github.io/box-office",
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
@@ -8,8 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "gh-pages": "^2.2.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fade-in": "^1.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -45,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
