--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:///Milan-Sharma-449.github.io/box-office",
+  "homepage": "https://milansharma.me/boxoffice",
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
@@ -18,8 +18,8 @@
     "web-vitals": "^3.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "npm run clear && react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "npm run clear && react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
