added new domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://milansharma.me/boxoffice",
+  "homepage": "https://milansharma.site/boxoffice",
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
